--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,33 +1,49 @@
-/* custom styles */
+/* custom styles 
+fix background photo, stop tiling*/
 body {
 	font-family: 'Rubik', sans-serif;
 
 }
-h1{
-	text-align: center;
-}
 
 nav {
-	text-align: center;
-	padding-bottom: 15px;
+	position: fixed;
+	width: 100%;
+	z-index: 100;
+	top:0;
+	padding: 20px;
 }
-nav a {
-	color: #000000;
+nav a{
+	display:inline-block;
+	text-align: center;
+	color: #ffffff;
+	padding-right: 100px;
 	font-family: 'Rubik', sans-serif;
 	font-weight: 800;
 	text-decoration: none;
-	padding: 10px;
-	margin: 10px;
 }
-img {
-	position: relative;
-	width: 55%;
-	height: 55%;
-	border: 12px dotted pink;
-	margin: 10px;
+nav a:hover{
+	font-size:30px;
+	-webkit-transition-timing-function: ease;
+	transition-timing-function: ease;
 }
-aside{
+header {
+	background-image: url(../imgs/stacie_napa.jpg);
+	/*background-repeat: no-repeat;*/
+	background-position: center;
+	background-attachment: fixed;
+	overflow: scroll;
+	height: 500px;
+	color: #fff;
 	display: flex;
-	justify-content: flex-end;
-	width: 30%;
+	/*justify-content: center;*/
+	align-items: center;
+	margin: 0 auto;
+}
+
+h2{
+	margin: 0;
+	padding-top: 10px;
+}
+#page-wrapper{
+background-color: #DFE7F5
 }
