--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,49 +1,73 @@
-/* custom styles 
-fix background photo, stop tiling*/
 body {
-	font-family: 'Rubik', sans-serif;
-
+    font-family: 'Rubik', sans-serif;
 }
-
-nav {
-	position: fixed;
-	width: 100%;
-	z-index: 100;
-	top:0;
-	padding: 20px;
+.navbar{
+    display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: flex-start;
+	overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 88%;
+    font-size: 1.2rem;
+    padding: 1rem;
 }
 nav a{
-	display:inline-block;
-	text-align: center;
-	color: #ffffff;
-	padding-right: 100px;
-	font-family: 'Rubik', sans-serif;
-	font-weight: 800;
+	padding: 0 1.5rem;
 	text-decoration: none;
+	color: #000;
 }
-nav a:hover{
-	font-size:30px;
-	-webkit-transition-timing-function: ease;
-	transition-timing-function: ease;
+nav a:hover {
+	text-decoration: none;
+	color: #000;
 }
-header {
-	background-image: url(../imgs/stacie_napa.jpg);
-	/*background-repeat: no-repeat;*/
-	background-position: center;
-	background-attachment: fixed;
-	overflow: scroll;
-	height: 500px;
-	color: #fff;
-	display: flex;
-	/*justify-content: center;*/
-	align-items: center;
-	margin: 0 auto;
+section{
+	margin-top: 50px;
+	padding-top: 30px;
+}
+img {
+    max-width: 600px;
+    height: auto%;
+    border-radius: 300px;
+    margin: 0;
+}
+#selfie{
+	padding-left: 80px;
+}
+.essay {
+    font-size: 12px;
+    text-align: justify;
+}
+.flex-button {
+    display: flex;
+    justify-content: center;
+	margin-bottom: 15px;
+}
+.container.aboutMe {
+    margin-left: 80px;
+    margin-righ: 80px;
 }
 
-h2{
-	margin: 0;
-	padding-top: 10px;
+.skills{
+	background-color: #F8F9FA;
 }
-#page-wrapper{
-background-color: #DFE7F5
+.footer{
+	display: flex;
+	justify-content: space-around;
+	padding-bottom: 1rem;
 }
+.footer a {
+	font-family: "Italianno", "sans-serif";
+	font-size: 1.5rem;
+	text-decoration: none;
+	color:#000;
+	padding-right: 1.25rem;
+}
+
+
+
+
+
+
