--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,20 +23,18 @@ nav a:hover {
 	text-decoration: none;
 	color: #000;
 }
-div{
-	width:100%;
-}
-section{
+#about{
 	margin-top: 50px;
 	padding-top: 30px;
 }
 img {
-    max-width: 600px;
+    max-width: 500px;
     height: auto%;
     border-radius: 300px;
     margin: 0;
 }
 #selfie{
+	max-width: 500px;
 	padding-left: 80px;
 	padding-right: 10%;
 }
@@ -52,19 +50,12 @@ img {
 .about{
 	width:100%;
 }
-.container.aboutMe {
-    margin-left: 80px;
-    margin-righ: 80px;
+#skills{
+	background-color: #F8F9FA;
+	height:320px;
+	padding-top: 20px;
 }
 
-.skills{
-	background-color: #F8F9FA;
-	height:250px;
-	padding-left: 20px;
-}
-.title{
-	padding-left: 6%;
-}
 
 .circle{
 	display:inline-block;
@@ -74,6 +65,7 @@ img {
 	width: 160px;
 	box-shadow: -6px 1px 1px #3e3f42db;
 	border-radius: 100%;
+	padding:10px;
 }
 span {
 	margin: auto;
@@ -82,40 +74,55 @@ span {
 	padding-left: 24%;
 	color: #fff;
 	position: relative;
-	top: 40%;
-	transform: translateY(-50%);
+	top: 35%;
+}
+.span3, .span4{
+	padding-left:20px;
 }
 .circle:nth-child(1){
-	left: 25%;
+	left: 23%;
 }
 .circle:nth-child(2){
-	left: 35%;
+	left: 30%;
 	background-color: #4FFFFE;
 }
 .circle:nth-child(3){
-	left: 45%;
+	left: 37%;
 	background-color: #FF2340;
 }
 .circle:nth-child(4){
-	left: 55%;
+	left: 44%;
 	background-color: #8B0CE8;
 }
 .circle:nth-child(5){
-	left: 65%;
+	left: 51%;
 	background-color: #E654E8;
+}
+.circle:nth-child(6){
+	left: 58%;
+	background-color: #25D630;
+}
+.circle:nth-child(7){
+	left: 65%;
+	background-color: #4347CE;
 }
 .altSpan{
 	display:none;
 }
-
-
+#skills, #projects{
+	margin: 20px 0;
+}
+.row{
+	margin:0;
+}
 
 
 
 .footer{
 	display: flex;
 	justify-content: space-around;
-	padding-bottom: 1rem;
+	background-color: #F8F9FA;
+	padding: 1rem;
 }
 .footer a {
 	font-family: "Italianno", "sans-serif";
@@ -123,6 +130,7 @@ span {
 	text-decoration: none;
 	color:#000;
 	padding-right: 1.25rem;
+
 }
 
 
